fix color contrast on 'what-i-do' section

--- a/style.css
+++ b/style.css
@@ -695,7 +695,6 @@ h4 {
 }
 
 .bloc-padding {
-  background-color: rgb(209, 190, 138);
   padding: 40px 40px 40px 40px;
 }
 
@@ -709,7 +708,7 @@ h4 {
 }
 
 .bgc-olive {
-  background-color: #d1be8a;
+  background-color: #e9e1c9;
 }
 
 .bgc-dark-slate-blue {
